unpackaged/main/default/objects/B2CCustomInput__c/B2CCustomInput__c.object-meta.xml
<CustomObject>
    <description>Buffer object, which is used for create Consent in a trigger context.

When an account is after insert/update, by the B2CContactProcess Flow, a Custom Input is created and trigger the creation of the wanted consent.</description>
    <label>B2CCustomInput</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2CCustomInputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>