unpackaged/main/default/objects/B2CCustomInput__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B2CCustomInputs</relationshipLabel>
    <relationshipName>B2CCustomInputs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>