unpackaged/main/default/objects/B2CCustomInput__c/fields/AddressConsent__c.field-meta.xml
<CustomField>
    <fullName>AddressConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AddressConsent</label>
    <type>Checkbox</type>
</CustomField>