unpackaged/main/default/objects/B2CCustomInput__c/fields/BackInStockSubscriptionSKU__c.field-meta.xml
<CustomField>
    <fullName>BackInStockSubscriptionSKU__c</fullName>
    <label>BackInStockSubscriptionSKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>