unpackaged/main/default/objects/B2CCustomInput__c/fields/CaptureContactPointType__c.field-meta.xml
<CustomField>
    <fullName>CaptureContactPointType__c</fullName>
    <label>CaptureContactPointType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>