unpackaged/main/default/objects/B2CCustomInput__c/fields/CaptureSource__c.field-meta.xml
<CustomField>
    <fullName>CaptureSource__c</fullName>
    <label>CaptureSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>