unpackaged/main/default/objects/B2CCustomInput__c/fields/contactPointType__c.field-meta.xml
<CustomField>
    <fullName>contactPointType__c</fullName>
    <label>contactPointType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>