unpackaged/main/default/objects/B2CCustomInput__c/fields/CustomContactPointType__c.field-meta.xml
<CustomField>
    <fullName>CustomContactPointType__c</fullName>
    <label>CustomContactPointType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>