unpackaged/main/default/objects/B2CCustomInput__c/fields/EmailConsent__c.field-meta.xml
<CustomField>
    <fullName>EmailConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailConsent</label>
    <type>Checkbox</type>
</CustomField>