unpackaged/main/default/objects/B2CCustomInput__c/fields/OptinCGI__c.field-meta.xml
<CustomField>
    <fullName>OptinCGI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptinCGI</label>
    <type>Checkbox</type>
</CustomField>