unpackaged/main/default/objects/B2CCustomInput__c/fields/OptinMessaging__c.field-meta.xml
<CustomField>
    <fullName>OptinMessaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptinMessaging</label>
    <type>Checkbox</type>
</CustomField>