unpackaged/main/default/objects/B2CCustomInput__c/fields/OptinPhone__c.field-meta.xml
<CustomField>
    <fullName>OptinPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptinPhone</label>
    <type>Checkbox</type>
</CustomField>