unpackaged/main/default/objects/B2CCustomInput__c/fields/OptOutContactPointType__c.field-meta.xml
<CustomField>
    <fullName>OptOutContactPointType__c</fullName>
    <label>OptOutContactPointType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>