unpackaged/main/default/objects/B2CCustomInput__c/fields/SaleChannel__c.field-meta.xml
<CustomField>
    <fullName>SaleChannel__c</fullName>
    <label>SaleChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>