unpackaged/main/default/objects/B2CCustomInput__c/fields/SubscriptionName__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionName__c</fullName>
    <label>SubscriptionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>